--- a/src/style.css
+++ b/src/style.css
@@ -43,5 +43,25 @@ input {
 }
 
 .landing__section-recentScores-button {
+  padding: 5px 10px;
+  background-color: aqua;
+  border-radius: 6px;
+}
+
+.table-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 185px;
   padding: 5px;
+  background-color: white;
+  border: 1px solid rgb(113, 110, 110);
+  margin: 5px;
+  transition: all 0.4s;
+}
+
+.user,
+.score {
+  font-size: 16px;
+  font-family: sans-serif;
 }
